--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
 <h1>WROGN</h1>
 <p>Click &#9196;for shopping</p>
 <a href="https://wrogn.com/" target="_blank"
@@ -43,3 +51,5 @@
   target="_blank"
   ><img src="blinkit logo.jpg" alt="image not found" height="100" width="100"
 /></a>
+</body>
+</html>
